--- a/resources/styles.css
+++ b/resources/styles.css
@@ -1,10 +1,17 @@
+body{
+    width: 100%;
+    height: 100%;
+    margin:0;
+    padding:0;
+    border:none;
+}
 existdb-dashboard{
-    width: 80%;
+    width: 100%;
     margin:0 auto;
 }
 existdb-package-descriptor{
     display: block;
-    background: whitesmoke;
+    /*background: whitesmoke;*/
     margin:10px 0;
     position: relative;
     min-height: 150px;
@@ -42,7 +49,8 @@ existdb-app-title{
     display: inline-flex;
     flex-direction: column;
     justify-content: center;
-    width: 320px;
+    width: 256px;
+    height:256px;
     margin: 10px;
     align-items: stretch;
 }
@@ -59,10 +67,16 @@ existdb-app-title{
 }
 
 .grid existdb-app-title{
-    font-size: 20px;
+    font-size: 16px;
     text-align: center;
     margin: 4px 0;
-
+    color:rgba(22,22,22,0.9);
+    line-height:22px;
+    height:44px;
+    position: absolute;
+    width: 98%;
+    bottom:0;
+    text-shadow: 1px 1px 2px rgba(150, 150, 150, 1);
 }
 .grid existdb-app-version{
     display: none;
@@ -71,7 +85,12 @@ existdb-app-title{
     display: none;
 }
 
-
+.grid existdb-local-packages{
+    display:flex;
+    flex-wrap:wrap;
+    justify-content: space-around;
+    flex-direction: row;
+}
 
 /*
 existdb-app-details{
